--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 @tailwind utilities;
 /* @tailwind components; */
 
-@layer base {
+/* @layer base {
   h1 {
     @apply text-5xl;
   }
@@ -26,20 +26,18 @@
   h6 {
     @apply text-base;
   }
-}
+} */
 
+/* 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  /* font-size: 13px;
-  line-height: 24px;
-  font-weight: 400; */
+  font-size: 16px;
 }
 
 body {
   margin: 0;
 }
 
-/* overwrite tailwind's default focus styles */
 :focus-visible {
   outline: none;
-}
+} */
